增强备份和恢复功能，提升用户体验
- 新增交互式助手，简化备份和恢复操作流程
- 支持按年/月/日组织备份目录结构
- 添加备份压缩和自动清理功能
- 扩展恢复选项，支持时间范围和单独的二进制日志恢复
- 改进Docker环境支持
- 优化命令行界面和错误处理
- 完善测试用例，提高代码质量和可靠性

--- a/config.ini.example
+++ b/config.ini.example
@@ -21,6 +21,12 @@ backup_format = %Y%m%d_%H%M%S
 threads = 4
 # Whether to use compression for backups
 compress = true
+# Whether to use year/month/day directory structure for backups
+use_dated_dirs = true
+# Whether to archive backups as tar.gz after creation
+archive_after_backup = true
+# Whether to automatically clean old backups before creating new ones
+auto_clean = true
 
 [BINLOG]
 # Binary log directory
@@ -29,3 +35,10 @@ binlog_dir = /var/log/mysql
 binlog_format = ROW
 # Binary log retention period in days
 binlog_retention_days = 7
+
+[DOCKER]
+# Docker settings (only needed if running MySQL in Docker)
+# MySQL container ID or name
+container_id = 
+# Whether to use Docker commands for MySQL operations
+use_docker = false
